更新 make.conf 配置

--- a/make.conf
+++ b/make.conf
@@ -42,6 +42,7 @@ ACCEPT_KEYWORDS="~loong"
 ACCEPT_LICENSE="*"
 GRUB_PLATFORMS="efi-64"
 INPUT_DEVICES="libinput evdev joystick"
-VIDEO_CARDS="amdgpu radeonsi"
+# https://wiki.gentoo.org/wiki/AMDGPU   /   https://wiki.gentoo.org/wiki/Radeon
+VIDEO_CARDS="amdgpu radeonsi radeon"
 LLVM_TARGETS="LoongArch AMDGPU"
 BINPKG_COMPRESS="xz"
